--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
             <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
             <div>
                 <p>
-                    Hello! My name is Max Vogel and Mehvix is my username
-                    online. Here’s a
+                    Hello! My name is Max Vogel, but <i>Mehvix</i> is my
+                    username for most things on the web — I'm sure you can
+                    figure out what out what it means. Here’s a
                     <a href="./static/media/IMG_20191020_011042.jpg"
                         >photo of me</a
                     ><img
@@ -110,7 +111,7 @@
                         style="width: 100%; margin: 1% 0"
                         class="hidden"
                     />
-                    at UW-Madhacks 2019. I'm an incoming freshmen at
+                    at UW-Madhacks 2019. Right now I'm a freshmen at
                     <a href="//www.berkeley.edu/">UC Berkeley</a> planning on
                     majoring in <a href="//eecs.berkeley.edu/">EECS</a> (and/or)
                     <a href="//me.berkeley.edu/">MechE</a>.
@@ -129,10 +130,10 @@
                     <a href="//www.team1306.com">1306</a> stuff.
                 </p>
                 <p>
-                    I created this website because I believe the web is better
-                    decentralized and to also force myself into writing more
-                    often so that I can improve communicating ideas through my
-                    <a href="/posts/index.html">blog</a>.
+                    I created this website (1) because I believe the web is
+                    better decentralized and (2) to also force myself into
+                    writing more often so I can improve communicating ideas
+                    through my <a href="/posts/index.html">blog</a>.
                 </p>
             </div>
 
@@ -146,12 +147,12 @@
                                 <td>Email</td>
                                 <td>
                                     [first name]<code>at</code>[this domain]
-                                    <wbr /> (<a href="keys.html">keys</a>)
+                                    <wbr />(<a href="keys.html">keys</a>)
                                 </td>
                             </tr>
                             <tr>
                                 <td>Signal</td>
-                                <td>[private — contact me]</td>
+                                <td>[private, contact me]</td>
                             </tr>
                             <tr>
                                 <td>Matrix</td>
@@ -159,14 +160,15 @@
                                     <span class="select-all"
                                         >@mehvix:matrix.org</span
                                     >
-                                    (<a href="keys.html">keys</a>)
+                                    <wbr />(<a href="keys.html">keys</a>)
                                 </td>
                             </tr>
                             <tr>
                                 <td>Discord</td>
                                 <td>
                                     <span class="select-all">Mehvix#7966</span>
-                                    (<a href="//stallman.org/discord.html"
+                                    <wbr />(<a
+                                        href="//stallman.org/discord.html"
                                         >if possible, don't use</a
                                     >)
                                 </td>
@@ -192,7 +194,8 @@
                                             display: inline;
                                             float: right;
                                         "
-                                    ><code style="margin: 0; width: 52vw; max-width: 42ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
+                                    ><code style="margin: 0; width: 52vw; max-width: 41.45ch;" class="noscroll select-all">054d937b2d1395f1560551eeb1552e3e60308c0350623c92ad7f6f31e3411f161a</code></pre>
+                                    <!--fuck you firefox-->
                                 </td>
                             </tr>
                         </tbody>
@@ -218,24 +221,34 @@
                 <div>
                     <table class="about">
                         <tr>
-                            <td style="width: 16.5ch">GitHub</td>
                             <td>
-                                <a href="//github.com/mehvix">Mehvix</a>
+                                Checkout my (personal) projects on
+                                <a href="//github.com/mehvix">GitHub</a>
                             </td>
                         </tr>
                         <tr>
-                            <td>Stack Overflow</td>
                             <td>
+                                Judge my
                                 <a href="//stackoverflow.com/users/7833617/"
-                                    >Mehvix</a
+                                    >Stack Overflow</a
                                 >
+                                answers
                             </td>
                         </tr>
                         <tr>
-                            <td>LinkedIn</td>
                             <td>
+                                Jam out to my
+                                <a href="//open.spotify.com/user/mehvix"
+                                    >Spotify</a
+                                >
+                                playlists
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Connect on the corporate cesspool
                                 <a href="//www.linkedin.com/in/mehvix/"
-                                    >Max Vogel</a
+                                    >LinkedIn</a
                                 >
                             </td>
                         </tr>
@@ -259,6 +272,14 @@
                 <table class="about">
                     <tbody>
                         <tr>
+                            <td><a href="//toolbox.mehvix.com">Toolbox</a></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="//notes.mehvix.com">Notes</a>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>
                                 <a href="posts">Blog</a> (<a
                                     href="posts/rss.xml"
@@ -268,21 +289,13 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><a href="//toolbox.mehvix.com">Toolbox</a></td>
+                            <td><a href="/quotes">Quotes</a></td>
                         </tr>
                         <tr>
-                            <td>
-                                <a href="//notes.mehvix.com">Notes</a>
-                            </td>
+                            <td><a href="/todo">Projects TODO</a></td>
                         </tr>
                         <tr>
-                            <td><a href="quotes.html">Quotes</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="todo.html">Projects TODO</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="serverservices.html">Server</a></td>
+                            <td><a href="/serverservices">Server</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -296,7 +309,8 @@
                     </tr>
                     <tr>
                         <td>$XMR</td>
-                        <td>45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ</a>
+                        <td>
+                            45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
                         </td>
                     </tr>
                     <tr>
