--- a/todo.html
+++ b/todo.html
@@ -73,7 +73,8 @@
                     >#TODO</a
                 >
             </div>
-            A backlog of future projects I haven't gotten around to yet.
+            A (probably outdated) backlog of projects I haven't gotten around to
+            yet.
             <br />
             ---
 
@@ -173,8 +174,6 @@
                     </li>
                 </ul>
 
-                <h1>Soundcloud Downloader with Metadata Scraper</h1>
-
                 <h1>Logs.tf scrapper + leaderboard</h1>
                 <ul>
                     <li>
@@ -216,13 +215,7 @@
                     </li>
                 </ul>
 
-                <h1>Learn Vim</h1>
-
-                <h1>Learn Regex</h1>
-
                 <h1>Learn git cli</h1>
-
-                <h1>Resistor color code calculator</h1>
 
                 <h1>Write about completed projects and other topics</h1>
                 <ul>
@@ -246,7 +239,8 @@
                     </tr>
                     <tr>
                         <td>$XMR</td>
-                        <td>45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ</a>
+                        <td>
+                            45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
                         </td>
                     </tr>
                     <tr>
