--- a/quotes.html
+++ b/quotes.html
@@ -336,7 +336,8 @@
                     </tr>
                     <tr>
                         <td>$XMR</td>
-                        <td>45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ</a>
+                        <td>
+                            45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
                         </td>
                     </tr>
                     <tr>
