--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>
                     Hello! My name is Max Vogel, but <i>Mehvix</i> is my
                     username for most things on the web — I'm sure you can
-                    figure out what out what it means. Here’s a
+                    figure out what it means. Here’s a
                     <a href="./static/media/IMG_20191020_011042.jpg"
                         >photo of me</a
                     ><img
