--- a/quotes.html
+++ b/quotes.html
@@ -76,6 +76,14 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>61A</b>
+                        <blockquote>
+                            Sometimes I look back at the midterms I've made and
+                            I'm like, how do I even do this question?
+                        </blockquote>
+                        <p>John DeNero</p>
+                    </div>
+                    <div>
                         <b>Longest Monkey Sentence</b>
                         <blockquote>
                             Give orange me give eat orange me eat orange give me
