--- a/404.html
+++ b/404.html
@@ -46,9 +46,7 @@
     <body>
         <div class="box">
             <div class="nav">
-                <a href="/index.html">~</a>/<a href="" class="inverse-bg"
-                    >404</a
-                >
+                <a href="/">~</a>/<a href="" class="inverse-bg">404</a>
             </div>
 
             <p>
