--- a/index.html
+++ b/index.html
@@ -96,7 +96,23 @@
                     Hello! My name is Max Vogel, but <i>Mehvix</i> is my
                     username for most things on the web — I'm sure you can
                     figure out what it means. Here’s a
-                    <a href="./static/media/IMG_20191020_011042.jpg"
+                    <a href="./static/media/me/gmaps2.png">photo of me</a
+                    ><img
+                        alt="Expand image"
+                        src="/static/media/expandoImage.svg"
+                        class="dropdown"
+                        onclick="toggleImage(me)"
+                        style="margin-left: 0.5ch"
+                    /><img
+                        alt="Me!"
+                        id="me"
+                        src="/static/media/me/gmaps2.png"
+                        style="width: 100%; margin: 1% 0"
+                        class="hidden"
+                    />
+                    on Google Maps in 2007.
+                    <!-- Here’s a
+                    <a href="./static/media/me/IMG_20191020_011042.jpg"
                         >photo of me</a
                     ><img
                         alt="Expand image"
@@ -111,7 +127,8 @@
                         style="width: 100%; margin: 1% 0"
                         class="hidden"
                     />
-                    at UW-Madhacks 2019. Right now I'm a freshmen at
+                    at UW-Madhacks 2019. -->
+                    Right now I'm a freshmen at
                     <a href="//www.berkeley.edu/">UC Berkeley</a> planning on
                     majoring in <a href="//eecs.berkeley.edu/">EECS</a> (and/or)
                     <a href="//me.berkeley.edu/">MechE</a>.
